@@ -4,5 +4,6 @@ _start:
 	movw	$(xtrn - .), %ax
 	movl	$(xtrn - .), %eax
 	movq	$(xtrn - .), %rax
+	movq	$xtrn, %rax
 
 	.p2align 4,0
