@@ -1,3 +1,8 @@
+2005-04-06  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/x86-64-pcrel.s: Test R_X86_64_32S.
+	* gas/i386/x86-64-pcrel.d: Updated.
+
 2005-04-01  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
 
 	* gas/vax/flonum.s: New testcase: Encode some flonums.
