@@ -1,3 +1,8 @@
+2005-04-06  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (tc_gen_reloc): Don't turn
+	BFD_RELOC_X86_64_32S into BFD_RELOC_32.
+
 2005-04-06  Nick Clifton  <nickc@redhat.com>
 
 	* po/rw.po: New translation: Kinyarwanda
